[package]
name = "hyper-rustls"
version = "0.16.1"
authors = ["Joseph Birr-Pixton <jpixton@gmail.com>"]
license = "Apache-2.0/ISC/MIT"
readme = "README.md"
description = "Rustls+hyper integration for pure rust HTTPS"
homepage = "https://github.com/ctz/hyper-rustls"
repository = "https://github.com/ctz/hyper-rustls"

[dependencies]
bytes = "0.4"
ct-logs = { version = "0.5", optional = true }
futures-util-preview = "0.3.0-alpha.17"
hyper = { git = "https://github.com/hyperium/hyper", default-features = false }
rustls = "0.15"
tokio-io = { git = "https://github.com/tokio-rs/tokio" }
tokio-rustls = { git = "https://github.com/quininer/tokio-rustls", branch = "tokio-0.2" }
webpki = "0.19.0"
webpki-roots = { version = "0.16", optional = true }

[dev-dependencies]
tokio = "0.1"
tokio-tcp = "0.1"

[features]
default = ["tokio-runtime"]
tokio-runtime = ["hyper/runtime", "ct-logs", "webpki-roots"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["tokio-runtime"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["tokio-runtime"]
